--- a/AutoTrader/AutoTrader.vcxproj
+++ b/AutoTrader/AutoTrader.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Strategy.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TechVec.h" />
     <ClInclude Include="ThostFtdcDepthMDFieldWrapper.h" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +194,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Strategy.cpp" />
+    <ClCompile Include="TechVec.cpp" />
     <ClCompile Include="ThostFtdcDepthMDFieldWrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
