migrate to 东航期货

--- a/AutoTrader/config.ini
+++ b/AutoTrader/config.ini
@@ -1,11 +1,11 @@
 [CtpAccount]
-BrokerID=0292
-UserID=00127
-Password=asdfgh
+BrokerID=0086
+UserID=00112
+Password=wodemima
 
 [CtpServer]
-MdFront=tcp://180.168.146.181:10210
-TradeFront=tcp://180.168.146.181:10200
+MdFront=tcp://180.168.146.181:10100
+TradeFront=tcp://180.168.146.181:10000
 RiskFront=
 
 [Instruments]
@@ -17,6 +17,9 @@ Port=3306
 DBName=qihuo
 User=root
 Password=wodemima
+
+[ProductInfo]
+Name=LyAutoTrader
 
 [Strategy]
 rb1510=k3UpThroughK5
