fix precise && part improve of trade

--- a/AutoTrader/config.ini
+++ b/AutoTrader/config.ini
@@ -19,11 +19,11 @@ User=root
 Password=wodemima
 
 [ProductInfo]
-Name=LyAutoTrader
+Name=LyATTrader
 
 [Strategy]
 rb1510=k3UpThroughK5
-rb1511=k3UpThroughK5
+rb1511=K3AVEThoughK5AVE
 
 [Arguments]
 RecordMode=BOOL_FALSE
