finish refinement of previous submission

--- a/AutoTrader/AutoTrader.vcxproj
+++ b/AutoTrader/AutoTrader.vcxproj
@@ -162,12 +162,11 @@
     <ClInclude Include="..\include\ThostFtdcUserApiDataType.h" />
     <ClInclude Include="..\include\ThostFtdcUserApiStruct.h" />
     <ClInclude Include="AccountManger.h" />
+    <ClInclude Include="AMACrossStratgy.h" />
     <ClInclude Include="CommonUtils.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="DBWrapper.h" />
     <ClInclude Include="ini_parser.h" />
-    <ClInclude Include="K3AVEThoughK5AVE.h" />
-    <ClInclude Include="k3UpThroughK5.h" />
     <ClInclude Include="MACrossStratgy.h" />
     <ClInclude Include="mdspi.h" />
     <ClInclude Include="mysqlwrapper.h" />
@@ -186,12 +185,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AccountManger.cpp" />
+    <ClCompile Include="AMACrossStratgy.cpp" />
     <ClCompile Include="AutoTrader.cpp" />
     <ClCompile Include="CommonUtils.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="DBWrapper.cpp" />
-    <ClCompile Include="K3AVEThoughK5AVE.cpp" />
-    <ClCompile Include="k3UpThroughK5.cpp" />
     <ClCompile Include="MACrossStratgy.cpp" />
     <ClCompile Include="mdspi.cpp" />
     <ClCompile Include="mysqlwrapper.cpp" />
