--- a/AutoTrader/config.ini
+++ b/AutoTrader/config.ini
@@ -22,8 +22,8 @@ Password=wodemima
 Name=LyATTrader
 
 [Strategy]
-rb1510=k3UpThroughK5
-rb1511=K3AVEThoughK5AVE
+rb1510=MACrossK3K5
+rb1511=AMACrossK3K5
 
 [Arguments]
 RecordMode=BOOL_FALSE
