replace ini with json

--- a/AutoTrader/config.ini
+++ b/AutoTrader/config.ini
@@ -22,8 +22,9 @@ Password=wodemima
 Name=LyATTrader
 
 [Strategy]
-rb1510=MACrossK3K5
-rb1511=AMACrossK3K5
+rb1510=MACross
+rb1511=WMACross
 
 [Arguments]
 RecordMode=BOOL_FALSE
+
