--- a/AutoTrader/AutoTrader.vcxproj.filters
+++ b/AutoTrader/AutoTrader.vcxproj.filters
@@ -103,7 +103,7 @@
       <Filter>Header Files\MACrossStratgy</Filter>
     </ClInclude>
     <ClInclude Include="EMACrossStratgy.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\MACrossStratgy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -153,7 +153,7 @@
       <Filter>Source Files\MACrossStratgy</Filter>
     </ClCompile>
     <ClCompile Include="EMACrossStratgy.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\MACrossStratgy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
