--- a/AutoTrader/config.json
+++ b/AutoTrader/config.json
@@ -12,10 +12,9 @@
    "Arguments":{
       "RecordMode":false
    },
-   "Instruments":[
-      "rb1510",
-      "rb1511"
-   ],
+   
+   "Instruments": "rb1510,rb1511",
+
    "DataBase":{
       "Host":"127.0.0.1",
       "Port":3306,
