--- a/AutoTrader/AutoTrader.vcxproj
+++ b/AutoTrader/AutoTrader.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Strategy.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TechUtils.h" />
     <ClInclude Include="TechVec.h" />
     <ClInclude Include="ThostFtdcDepthMDFieldWrapper.h" />
     <ClInclude Include="unittest.h" />
@@ -212,6 +213,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TechUtils.cpp" />
     <ClCompile Include="ThostFtdcDepthMDFieldWrapper.cpp" />
     <ClCompile Include="WMACrossStratgy.cpp" />
   </ItemGroup>
