--- a/AutoTrader/config.json
+++ b/AutoTrader/config.json
@@ -26,7 +26,7 @@
       "Name":"LyATTrader"
    },
    "StrategyMap":{
-      "rb1510":"MACross",
+      "rb1510":"MACrossBOLL",
       "rb1511":"WMACross"
    },
    "Strategies":[
@@ -49,6 +49,11 @@
          "Name":"EMACross",
          "ShortMA":3,
          "LongMA":5
+      },
+      {
+         "Name":"MACrossBOLL",
+         "ShortMA":5,
+         "LongMA":10         
       }
    ]
 }
