use KData to calculate BOLL

--- a/AutoTrader/config.json
+++ b/AutoTrader/config.json
@@ -10,7 +10,7 @@
       "RiskFront":""
    },
    "Arguments":{
-      "RecordMode":false
+      "RecordMode":true
    },
    
    "Instruments": "rb1510,rb1511",
