fix order object construct problem

--- a/AutoTrader/config.json
+++ b/AutoTrader/config.json
@@ -10,7 +10,7 @@
       "RiskFront":""
    },
    "Arguments":{
-      "RecordMode":true
+      "RecordMode":false
    },
    
    "Instruments": "rb1510,rb1511",
